kubernetes/apps/authentik/authentik-extras/app/ingress-authentik-cloudflared.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-cloudflared
  namespace: authentik
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: auth.${BASE_DOMAIN}
    http:
      paths:
      - backend:
          service:
            name: authentik-server
            port:
              number: 80
        path: /
        pathType: Prefix
